--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
 <body
 	style="width: 100dvw; height: 100dvh; display: flex; justify-content: center; align-items: center; padding: 0px; margin: 0px; overscroll-behavior: none;">
 	<div id="pad" style="border: 2px solid black; width: 95%; height: 95%; position: relative;">
-		<div style="position:absolute; bottom: 0px; display: flex; width: 100%; height: 40%;">
-			<button id="clear" style="flex-grow: 1;">left click</button>
-			<button id="clear" style="flex-grow: 1;">right click</button>
+		<div style="position:absolute; top: 0px; display: flex; width: 100%; height: 40%;">
+			<button id="click" style="flex-grow: 1;">left click</button>
+			<button id="rclick" style="flex-grow: 1;">right click</button>
 		</div>
 	</div>
 	<div id="logs">
